--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ osx_image: xcode9.3
 env:
   - SWIFT_VERSION=4.1
 install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew bundle fi
   - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
 script:
   - swift build
